--- a/Analyse/HTML/TestResult/TestResultTemplate.html
+++ b/Analyse/HTML/TestResult/TestResultTemplate.html
@@ -183,7 +183,7 @@
 			{
 				if(Elements.hasOwnProperty(i))
 				{
-					Elements.
+					Elements[i]
 					var Width = DefaultWidth * parseInt(Elements[i].getAttribute('data-width'));
 					var Height = DefaultHeight * parseInt(Elements[i].getAttribute('data-height'));
 					'###MARGIN_TOP###':str(int(-800./float(DisplayOptions['Width']*self.TestResultEnvironmentObject.Configuration['DefaultValues']['CanvasWidth'])*
