--- a/Analyse/HTML/TestResult/TestResultTemplate.html
+++ b/Analyse/HTML/TestResult/TestResultTemplate.html
@@ -174,7 +174,7 @@
 				</div>
 			</div>
 		<script type="text/javascript">
-		document.onload = function{
+		document.onload = function(e){
 			var Elements = document.getElementByClassName('ImageLinkBack');
 			var DefaultWidth = 200;
 			var ScreenWidth = self.innerWidth;
