--- a/Analyse/HTML/TestResult/TestResultTemplate.html
+++ b/Analyse/HTML/TestResult/TestResultTemplate.html
@@ -83,7 +83,7 @@
 									<div class="Plot">
 										<div class="ImageWrap">
 											<!-- ###PLOT_IMAGE### -->
-												<a href="####IMAGELARGECONTAINERID###" class="ImageLink">
+												<a href="####IMAGELARGECONTAINERID###" class="ImageLink" onclick="RefreshSizes('###IMAGELARGECONTAINERID###');">
 													<img class="Image" src="###FILENAME###" alt="Plot" />
 												</a>
 												<div class="LargeImageContainer" id="###IMAGELARGECONTAINERID###">
@@ -174,47 +174,49 @@
 				</div>
 			</div>
 		<script type="text/javascript">
-		var Elements = document.getElementsByClassName('ImageLinkBack');
-		var DefaultWidth = 200;
-		var DefaultHeight= 200;
-		var Margin = 15;
-		var ScreenWidth = self.innerWidth;
-		var ScreenHeight = self.innerHeight;
-		for(var i in Elements)
+		function RefreshSizes(ImageLargeContainerID)
 		{
-			if(Elements.hasOwnProperty(i))
+			var Elements = [document.getElementsById(ImageLargeContainerID).children[0]];
+			var DefaultWidth = 200;
+			var DefaultHeight= 200;
+			var Margin = 15;
+			var ScreenWidth = self.innerWidth;
+			var ScreenHeight = self.innerHeight;
+			for(var i in Elements)
 			{
-				if(Elements[i].getAttribute)
+				if(Elements.hasOwnProperty(i))
 				{
-					var Width = DefaultWidth * parseInt(Elements[i].getAttribute('data-width'));
-					var Height = DefaultHeight * parseInt(Elements[i].getAttribute('data-height'));
-					var ImageAspectRatio = Width / Height;
-					var ScaledWidth = ScreenWidth*0.9;
-					var ScaledHeight = ScreenHeight*0.9;
-					var ScaleTo = 'Width';
-					if(ScaledWidth / ImageAspectRatio > 0.9 * ScreenHeight){
-						ScaleTo = 'Height';
-						ScaledWidth = ImageAspectRatio * ScaledHeight;
-					}
-					else{
-						ScaleTo = 'Width';
-						ScaledHeight = ScaledWidth / ImageAspectRatio;
-					}
-					Elements[i].style.marginTop = -1* ((ScaledHeight+2*Margin)/2)+"px";
-					Elements[i].style.marginLeft = -1* ((ScaledWidth+2*Margin)/2)+"px";
-					var ImageElement = Elements[i].children[1];
-					if(ScaleTo == 'Width')
+					if(Elements[i].getAttribute)
 					{
-						ImageElement.style.width = ScaledWidth + 'px';
-					}
-					else
-					{
-						ImageElement.style.height = ScaledHeight + 'px';
+						var Width = DefaultWidth * parseInt(Elements[i].getAttribute('data-width'));
+						var Height = DefaultHeight * parseInt(Elements[i].getAttribute('data-height'));
+						var ImageAspectRatio = Width / Height;
+						var ScaledWidth = ScreenWidth*0.9;
+						var ScaledHeight = ScreenHeight*0.9;
+						var ScaleTo = 'Width';
+						if(ScaledWidth / ImageAspectRatio > 0.9 * ScreenHeight){
+							ScaleTo = 'Height';
+							ScaledWidth = ImageAspectRatio * ScaledHeight;
+						}
+						else{
+							ScaleTo = 'Width';
+							ScaledHeight = ScaledWidth / ImageAspectRatio;
+						}
+						Elements[i].style.marginTop = -1* ((ScaledHeight+2*Margin)/2)+"px";
+						Elements[i].style.marginLeft = -1* ((ScaledWidth+2*Margin)/2)+"px";
+						var ImageElement = Elements[i].children[1];
+						if(ScaleTo == 'Width')
+						{
+							ImageElement.style.width = ScaledWidth + 'px';
+						}
+						else
+						{
+							ImageElement.style.height = ScaledHeight + 'px';
+						}
 					}
 				}
 			}
 		}
-	
 	
 		
 		
