--- a/Analyse/HTML/TestResult/TestResultTemplate.html
+++ b/Analyse/HTML/TestResult/TestResultTemplate.html
@@ -176,7 +176,7 @@
 		<script type="text/javascript">
 		function RefreshSizes(ImageLargeContainerID)
 		{
-			var Elements = [document.getElementsById(ImageLargeContainerID).children[0]];
+			var Elements = [document.getElementById(ImageLargeContainerID).children[0]];
 			var DefaultWidth = 200;
 			var DefaultHeight= 200;
 			var Margin = 15;
