--- a/Analyse/HTML/TestResult/TestResultTemplate.html
+++ b/Analyse/HTML/TestResult/TestResultTemplate.html
@@ -67,6 +67,7 @@
 															<h4 class="ImageTitle">###TITLE###</h4>
 															<img class="ImageLarge" src="###FILENAME###"  alt="Plot"/>
 														</a>
+														<a class="PDFLink" src="###PDFFILENAME###">&gt; PDF Version</a>
 													</div>
 												<!-- ###PLOT_IMAGE### -->
 											</div>
