production overview: add iv curve plots, test duration, DAC plots, hide too many rows in test summary, cumulative plot

--- a/Analyse/HTML/ProductionOverview/Table.html
+++ b/Analyse/HTML/ProductionOverview/Table.html
@@ -1,8 +1,8 @@
 <div class="ProductionOverviewTable">
-	<table>
+	<table id="###TABLEID###">
 		<tbody>
 			<!-- ###TABLE_ROW### -->
-				<tr>
+				<tr class="###CLASS###">
 					<!-- ###TABLE_COLUMN### -->
 						<td class="###CLASS###">###VALUE###</td>
 					<!-- ###TABLE_COLUMN### -->
