Production Summary: add dead pixel overview, add efficiency plot, add vcal calibration slope/offset, add sections with navigation

--- a/Analyse/HTML/ProductionOverview/OverviewTemplate.html
+++ b/Analyse/HTML/ProductionOverview/OverviewTemplate.html
@@ -50,7 +50,8 @@
 				</div>
 				<div id="ContentWrap">
 					<div id="Content"  class="Pagewidth">
-						<h3>Overview List</h3>
+						<a name='PageTop' class='anchor'></a>
+						<h3>Production/Testing overview</h3>
 						<div id="OverviewTableContainer">
 							<!-- ###PRODUCTIONOVERVIEW### -->
 								
