prepare production overview structure for 'per week' pages

--- a/Analyse/HTML/ProductionOverview/OverviewTemplate.html
+++ b/Analyse/HTML/ProductionOverview/OverviewTemplate.html
@@ -23,7 +23,7 @@
 									<ul id="Clickpath">
 										<!-- ###CLICKPATH_ENTRY### -->
 											<li>
-												<a href="#">Production Overview</a>
+												<a href="###URL###">###LABEL###</a>
 											</li>
 										<!-- ###CLICKPATH_ENTRY### -->
 									</ul>
