improve module failures overview

--- a/Analyse/HTML/ProductionOverview/Plot.html
+++ b/Analyse/HTML/ProductionOverview/Plot.html
@@ -2,7 +2,7 @@
 	<div class="ImageWrap">
 		<!-- ###PLOT_IMAGE### -->
 			<a href="####IMAGELARGECONTAINERID###" class="ImageLink" onclick="RefreshSizes('###IMAGELARGECONTAINERID###');">
-				<img class="Image" src="###FILENAME###" alt="Plot" />
+				<img class="Image" src="###FILENAME###" alt="Plot" style="###STYLE###"/>
 			</a>
 			<div class="LargeImageContainer" id="###IMAGELARGECONTAINERID###">
 				<a href="#d" class="ImageLinkBack" style="margin-top:###MARGIN_TOP###px;" data-width="###WIDTH###" data-height="###HEIGHT###">
