--- a/Analyse/MoReWeb.html
+++ b/Analyse/MoReWeb.html
@@ -8,14 +8,14 @@
 	<body>
 
 	<h1>MoReWeb v0.6.0</h1>
-	last updated: September 10, 2015
+	last updated: September 11, 2015
 	<h2>Changelog</h2>
 	<a href='Changelog/MoReWeb_changes.html'>see Changelog</a>
 
 	<h2>Requirements</h2>
 	<ul>
 	<li>Python 2.6 (2.7 recommended)</li>
-	<li>ROOT 5.34 (should also work with ROOT 6)</li>
+	<li>ROOT 5.34.19 (should also work with ROOT 6)</li>
 	<li>recent Web browser (min Firefox 4, Chrome 18, Safari 3, Opera 9, IE 10)</li>
 	</ul>
 
@@ -23,6 +23,12 @@
 	<ul>
 	<li>Clone from git: <strong>https://github.com/psi46/MoReWeb.git</strong></li>
 	<li>copy <strong>Paths.cfg.default</strong> to Paths.cfg and adjust paths</li>
+	</ul>
+
+	<h2>How to run</h2>
+	<ul>
+	<li>run './Controller.py' in Analyse subdirectory</li>
+	<li>run './Controller.py -p' to create production overview page if needed</li>
 	</ul>
 
 	<h2>Documentation</h2>
@@ -49,6 +55,11 @@
 	<h3>How can one delete modules/qualifications from the list?</h3>
 	<ul>
 	<li>Use an sqlite editor, like <strong>sqlitebrowser</strong> or run './Controller.py -d' and then delete row by row. There will be a more user friendly way soon.</li>
+	</ul>
+
+	<h3>How can only new folders be analyzed, even if MoReWeb version changed?</h3>
+	<ul>
+	<li>Use './Controller.py -new'</li>
 	</ul>
 
 	<a href='http://cmspixel.phys.ethz.ch/'>back to ETH CMS Pixel group page</a>
