do decision which of bb4 and bb2 to take only once if both are present

--- a/Analyse/Changelog/MoReWeb_changes.html
+++ b/Analyse/Changelog/MoReWeb_changes.html
@@ -7,7 +7,17 @@
 
 	<body>
 	<h1>MoReWeb changelog</h1>
-	last updated: September 9, 2015
+	last updated: September 16, 2015	
+	<h2>v0.6.1</h2>
+	This list should give an overview of new features and bugfixes from the last few months, but is not complete.
+	<h3>New Features</h3>
+	<h4>Fulltest analysis</h4>
+	<ul>
+		<li>
+			add BB2 test
+		</li>
+	</ul>
+
 	<h2>v0.6.0</h2>
 	This list should give an overview of new features and bugfixes from the last few months, but is not complete.
 	<h3>New Features</h3>
