reduce filesize of x-ray hr finalresults

--- a/Analyse/Changelog/MoReWeb_changes.html
+++ b/Analyse/Changelog/MoReWeb_changes.html
@@ -7,9 +7,23 @@
 
 	<body>
 	<h1>MoReWeb changelog</h1>
-	last updated: September 16, 2015	
+	last updated: September 17, 2015	
+	<h2>v0.6.2</h2>
+	<h3>General changes</h3>
+	<h4>Fulltest analysis</h4>
+	<ul>
+		<li>
+			use png for chip maps to reduce file sizes
+		</li>
+	</ul>
+	<h4>Fulltest analysis</h4>
+	<ul>
+		<li>
+			use png for chip maps to reduce file sizes			
+		</li>
+	</ul>
+
 	<h2>v0.6.1</h2>
-	This list should give an overview of new features and bugfixes from the last few months, but is not complete.
 	<h3>New Features</h3>
 	<h4>Fulltest analysis</h4>
 	<ul>
