--- a/Analyse/Changelog/MoReWeb_changes.html
+++ b/Analyse/Changelog/MoReWeb_changes.html
@@ -9,17 +9,11 @@
 	<h1>MoReWeb changelog</h1>
 	last updated: September 17, 2015	
 	<h2>v0.6.2</h2>
-	<h3>General changes</h3>
-	<h4>Fulltest analysis</h4>
+	This version reduces the total size of output folders in FinalResults by more than 50% for both X-ray and FullQualification.
+	<h4>General changes</h4>
 	<ul>
 		<li>
 			use png for chip maps to reduce file sizes
-		</li>
-	</ul>
-	<h4>Fulltest analysis</h4>
-	<ul>
-		<li>
-			use png for chip maps to reduce file sizes			
 		</li>
 	</ul>
 
