--- a/Analyse/Changelog/MoReWeb_changes.html
+++ b/Analyse/Changelog/MoReWeb_changes.html
@@ -7,7 +7,10 @@
 
 	<body>
 	<h1>MoReWeb changelog</h1>
-	last updated: September 17, 2015	
+	last updated: September 23, 2015
+	<h2>v0.6.3</h2>
+	adds upload of HR test results to global DB
+
 	<h2>v0.6.2</h2>
 	This version reduces the total size of output folders in FinalResults by more than 50% for both X-ray and FullQualification.
 	<h4>General changes</h4>
