--- a/Analyse/Changelog/MoReWeb_changes.html
+++ b/Analyse/Changelog/MoReWeb_changes.html
@@ -7,9 +7,20 @@
 
 	<body>
 	<h1>MoReWeb changelog</h1>
-	last updated: September 23, 2015
+	last updated: September 24, 2015
 	<h2>v0.6.3</h2>
 	adds upload of HR test results to global DB
+
+	<h3>Bug fixes</h3>
+
+	<h4>Fitting</h4>
+	<ul>
+		<li>fixed detection of saturated PH for problematic ROCs which saturate at 254</li>
+	</ul>
+	<h4>Fulltest analysis</h4>
+	<ul>
+		<li>fix problems of wrong DAC parameters displayed and trim vcal used for defects grading if dacParameter files or file date were modified after test</li>
+	</ul>
 
 	<h2>v0.6.2</h2>
 	This version reduces the total size of output folders in FinalResults by more than 50% for both X-ray and FullQualification.
