--- a/Analyse/Changelog/MoReWeb_changes.html
+++ b/Analyse/Changelog/MoReWeb_changes.html
@@ -8,6 +8,11 @@
 	<body>
 	<h1>MoReWeb changelog</h1>
 	last updated: September 24, 2015
+	<h2>v0.6.4</h2>
+    modified IV grading which takes I(+17)/I(-20) at 150V into account<br />
+	adds Iana loss test to Fulltest analysis<br />
+    adds readout error statistics to x-ray HR tests<br />
+
 	<h2>v0.6.3</h2>
 	adds upload of HR test results to global DB
 
