--- a/Analyse/Changelog/MoReWeb_changes.html
+++ b/Analyse/Changelog/MoReWeb_changes.html
@@ -7,11 +7,15 @@
 
 	<body>
 	<h1>MoReWeb changelog</h1>
-	last updated: September 30, 2015
+	last updated: October 12, 2015
+
+	<h2>v0.6.6</h2>
+	add possibility to place a file containing the grade into each fulltest/x-ray hr subfolder to manually change grade. (comments can be placed in the main folder in a file called comments.txt)<br />
+
 	<h2>v0.6.4</h2>
-    modified IV grading which takes I(+17)/I(-20) at 150V into account. If IV at -20 is not available, ratio grading is skipped.<br />
+	modified IV grading which takes I(+17)/I(-20) at 150V into account. If IV at -20 is not available, ratio grading is skipped.<br />
 	adds Iana loss test to Fulltest analysis<br />
-    adds readout error statistics to x-ray HR tests<br />
+	adds readout error statistics to x-ray HR tests<br />
 
 	<h2>v0.6.3</h2>
 	adds upload of HR test results to global DB
