ADD GRADING ON ABSOLUTE IV(150) VALUE TO -20 (same criteria as +17)

--- a/Analyse/Changelog/MoReWeb_changes.html
+++ b/Analyse/Changelog/MoReWeb_changes.html
@@ -7,7 +7,10 @@
 
 	<body>
 	<h1>MoReWeb changelog</h1>
-	last updated: October 12, 2015
+	last updated: October 14, 2015
+
+	<h2>v0.6.7</h2>
+	IV grading: also grade on measured value of leakage current at -20 degrees with the same criteria than at +17. <strong>This will affect grading of modules that have both a higher leakage current at -20 than at +17 and a leakage current at -20 larger than 10 uA.</strong>
 
 	<h2>v0.6.6</h2>
 	add possibility to place a file containing the grade into each fulltest/x-ray hr subfolder to manually change grade. (comments can be placed in the main folder in a file called comments.txt)<br />
