--- a/Analyse/Changelog/MoReWeb_changes.html
+++ b/Analyse/Changelog/MoReWeb_changes.html
@@ -7,7 +7,29 @@
 
 	<body>
 	<h1>MoReWeb changelog</h1>
-	last updated: October 27, 2015
+	last updated: Nov 16, 2015
+
+	<h2>v0.6.8</h2>
+	<h3>Grading</h3>
+	<h4>FullQualification</h4>
+	<ul>
+		<li>Fullqualification Noise grading: 500/1000 to 200/300</li>
+		<li>Exclude threshold defects from Gain and p1 defects</li>
+	</ul>
+	<h4>X-ray</h4>
+	<ul>
+		<li>Grade 'C' for bad double coulmns (half or more inefficient pixels)</li>
+		<li>Exclude bad double columns in efficiency fit</li>
+		<li>Noise: tbd</li>
+	</ul>
+
+	<h3>Features</h3>
+	<ul>
+		<li>Improved PresentationMaker and Production Overview generation</li>
+		<li>Readback parameters plot shown on Fulltest/ROC pages</li>
+		<li>Reception tests can be analyzed</li>
+		<li>Speed-up: Analysis of FQ takes 45 % less time now</li>
+	</ul>	
 
 	<h2>v0.6.7</h2>
 	<strong>v0.6.7-12</strong>: fix bug with not found IV curve files if qualifications with different directory structures are analyzed in one go
