make comment fields bold. if they contain an exclamation mark, make them red, too

--- a/Analyse/HTML/TestResult/TestResultTemplate.html
+++ b/Analyse/HTML/TestResult/TestResultTemplate.html
@@ -81,7 +81,7 @@
 													<tr>
 														<td class="Key">###KEY###</td>
 														<td class="Label">###LABEL###</td>
-														<td class="Value">###VALUE###</td>
+														<td class="Value" style="###STYLE###">###VALUE###</td>
 														<td class="Unit">###UNIT###</td>
 													</tr>
 												<!-- ###KEYVALUEDICTPAIRS_ROW### -->
