--- a/Analyse/Changelog/MoReWeb_changes.html
+++ b/Analyse/Changelog/MoReWeb_changes.html
@@ -7,9 +7,9 @@
 
 	<body>
 	<h1>MoReWeb changelog</h1>
-	last updated: Nov 16, 2015
+	last updated: Nov 17, 2015
 
-	<h2>v0.6.8</h2>
+	<h2>v0.7.0</h2>
 	<h3>Grading</h3>
 	<h4>FullQualification</h4>
 	<ul>
@@ -20,7 +20,7 @@
 	<ul>
 		<li>Grade 'C' for bad double coulmns (half or more inefficient pixels)</li>
 		<li>Exclude bad double columns in efficiency fit</li>
-		<li>Noise: tbd</li>
+		<li>Noise: criteria for mean noise 300/400</li>
 	</ul>
 
 	<h3>Features</h3>
