--- a/Analyse/MoReWeb.html
+++ b/Analyse/MoReWeb.html
@@ -7,15 +7,15 @@
 
 	<body>
 
-	<h1>MoReWeb v0.6.7</h1>
-	last updated: October 14, 2015
+	<h1>MoReWeb v0.7.0</h1>
+	last updated: November 17, 2015
 	<h2>Changelog</h2>
 	<a href='Changelog/MoReWeb_changes.html'>see Changelog</a>
 
 	<h2>Requirements</h2>
 	<ul>
 	<li>Python 2.6 (2.7 recommended)</li>
-	<li>ROOT 5.34.19 (should also work with ROOT 6)</li>
+	<li>ROOT 5.34.19+ or ROOT 6</li>
 	<li>recent Web browser (min Firefox 4, Chrome 18, Safari 3, Opera 9, IE 10)</li>
 	</ul>
 
