--- a/Analyse/Changelog/MoReWeb_changes.html
+++ b/Analyse/Changelog/MoReWeb_changes.html
@@ -13,7 +13,7 @@
 	<h3>Grading</h3>
 	<h4>FullQualification</h4>
 	<ul>
-		<li>Fullqualification Noise grading: 500/1000 to 200/300</li>
+		<li>FullQualification Noise grading: 500/1000 to 200/300</li>
 		<li>Exclude threshold defects from Gain and p1 defects</li>
 	</ul>
 	<h4>X-ray</h4>
@@ -29,6 +29,11 @@
 		<li>Readback parameters plot shown on Fulltest/ROC pages</li>
 		<li>Reception tests can be analyzed</li>
 		<li>Speed-up: Analysis of FQ takes 45 % less time now</li>
+		<li>Analysis of single tests:</li>
+		<ul>
+			<li><strong>PixelAlive</strong>: PixelAlive map per module and per chip</li>
+			<li><strong>ReadbackCal</strong>: ReadbackParameters table and plots per chip</li>
+		</ul>
 	</ul>	
 
 	<h2>v0.6.7</h2>
