--- a/Analyse/HTML/ProductionOverview/OverviewTemplate.html
+++ b/Analyse/HTML/ProductionOverview/OverviewTemplate.html
@@ -76,8 +76,9 @@
 				{
 					if(Elements[i].getAttribute)
 					{
-						var Width = DefaultWidth * parseInt(Elements[i].getAttribute('data-width'));
-						var Height = DefaultHeight * parseInt(Elements[i].getAttribute('data-height'));
+						var Width = parseInt(Elements[i].children[0].offsetWidth);
+						var Height = parseInt(Elements[i].children[0].offsetHeight);
+
 						var ImageAspectRatio = Width / Height;
 						var ScaledWidth = ScreenWidth*0.9;
 						var ScaledHeight = ScreenHeight*0.9;
@@ -92,17 +93,14 @@
 						}
 						Elements[i].style.marginTop = -1* ((ScaledHeight+2*Margin)/2)+"px";
 						Elements[i].style.marginLeft = -1* ((ScaledWidth+2*Margin)/2)+"px";
-						var ImageElement = Elements[i].children[1];
+						var ImageElement = Elements[i].children[0];
 
-						ImageElement.style.max-height = '100%';
-						ImageElement.style.max-width = '100%';
+						ImageElement.style.height = ScaledHeight + 'px';
+						ImageElement.style.width = ScaledWidth + 'px';
 					}
 				}
 			}
 		}
-	
-		
-		
 		</script>
 	</body>
 </html>
