--- a/Analyse/Changelog/MoReWeb_changes.html
+++ b/Analyse/Changelog/MoReWeb_changes.html
@@ -7,7 +7,7 @@
 
 	<body>
 	<h1>MoReWeb changelog</h1>
-	last updated: Nov 17, 2015
+	last updated: Feb 1, 2016
 
 	<h2>v0.7.0</h2>
 	<h3>Grading</h3>
@@ -18,7 +18,7 @@
 	</ul>
 	<h4>X-ray</h4>
 	<ul>
-		<li>Grade 'C' for bad double coulmns (half or more inefficient pixels)</li>
+		<li>Grade 'C' for bad double coulmns (1 percent or more inefficient pixels)</li>
 		<li>Exclude bad double columns in efficiency fit</li>
 		<li>Noise: criteria for mean noise 300/400</li>
 	</ul>
@@ -28,13 +28,21 @@
 		<li>Improved PresentationMaker and Production Overview generation</li>
 		<li>Readback parameters plot shown on Fulltest/ROC pages</li>
 		<li>Reception tests can be analyzed</li>
-		<li>Speed-up: Analysis of FQ takes 45 % less time now</li>
+		<li>Speed-up of analysis of FQ (without fit) takes 45 % less time now</li>
+		<li>Speed-up of scurve fit and linear PH fits</li>
 		<li>Analysis of single tests:</li>
 		<ul>
 			<li><strong>PixelAlive</strong>: PixelAlive map per module and per chip</li>
 			<li><strong>ReadbackCal</strong>: ReadbackParameters table and plots per chip</li>
 		</ul>
 	</ul>	
+
+	<h2>v0.6.8</h2>
+	<ul>
+		<li>Incomplete/broken/fake test data for not testable modules can now be uploaded to the Pisa DB. HTML pages show more explicitly which tests were missing in the full Qualification</li>
+		<li>LeakageCurrentPON tests can now be uploaded.</li>
+	</ul>
+
 
 	<h2>v0.6.7</h2>
 	<strong>v0.6.7-12</strong>: fix bug with not found IV curve files if qualifications with different directory structures are analyzed in one go
