--- a/Analyse/MoReWeb.html
+++ b/Analyse/MoReWeb.html
@@ -8,13 +8,14 @@
 	<body>
 
 	<h1>MoReWeb v0.7.2</h1>
-	last updated: February 18, 2016
+	last updated: February 19, 2016
 	<h2>Changelog</h2>
 	<a href='Changelog/MoReWeb_changes.html'>see Changelog</a>
 
 	<h2>Requirements</h2>
 	<ul>
 	<li>Python 2.6 (2.7 recommended)</li>
+	<li>optional python modules: MySQLdb</li>
 	<li>ROOT 5.34.19+ or ROOT 6</li>
 	<li>recent Web browser (min Firefox 4, Chrome 18, Safari 3, Opera 9, IE 10)</li>
 	</ul>
