--- a/Analyse/Changelog/MoReWeb_changes.html
+++ b/Analyse/Changelog/MoReWeb_changes.html
@@ -7,9 +7,18 @@
 
 	<body>
 	<h1>MoReWeb changelog</h1>
-	last updated: Feb 18, 2016
+	last updated: May 19, 2016
 
-	<h2>v0.7.2 - DB reprocessing</h2>
+	<h2>v1.0.0 - DB reprocessing</h2>
+ 	<ul>
+		<li>made for DB reprocessing with <b>final grading</b></li>
+		<li><b>fix:</b> sometimes missing plots in Fulltest</li>
+		<li><b>fix:</b> exceptions for some cases with incomplete data</li>
+		<li>plot labels corrected, plot axis set to fixed in some x-ray tests</li>
+		<li>exit code 404 if no data to analyze has been found (for global DB!)</li>
+	</ul>
+
+	<h2>v0.7.2</h2>
     <ul>
 		<li><b>fix:</b> defective pixel counts in performance parameters dictionary were -1</li>
 		<li><b>fix:</b> remove dependence on <b>numpy</b> module</li>
